--- a/0.intro_python.md
+++ b/0.intro_python.md
@@ -19,7 +19,7 @@ You can think about variables as a word that stores a value. Simple as that.
 
 ```python
 # booleans
-true_boolean = True # T not t!
+true_boolean = True # T (uppercase) not t!
 false_boolean = False # F not f!
 
 # string
@@ -32,6 +32,7 @@ book_price = 15.80
 
 ### Control Flow: conditional statements
 If something is True do something otherwise do something else.
+
 ```python
 if 1 > 2:
   print("1 is greater than 2")
@@ -82,8 +83,7 @@ my_integers = [5, 7, 3, 4, 4]
 To do something with one element of the array we use indexes like this
 ```python
 print(my_integers[0]) # 5
-print(my_integers[1]) # 7
-print(my_integers[4]) # 4
+print(my_integers[1] + my_integers[4]) # 7 + 4 = 11
 ```
 
 To add an element to our list we use append()
@@ -93,6 +93,14 @@ bookshelf.append("The Effective Engineer")
 bookshelf.append("The 4 Hour Work Week")
 print(bookshelf[0]) # The Effective Engineer
 print(bookshelf[1]) # The 4 Hour Work Week
+```
+
+### Tuples
+Lists that cannot be changed, just another thing () in place of [].
+
+```python
+  a = (1, 2, "string", [])
+  print(a[2])
 ```
 
 ### Dictionary: Key-Value Data Structure
