--- a/1.numpy.md
+++ b/1.numpy.md
@@ -1,10 +1,11 @@
 # Numpy
-Numpy is the core library for scientific computing in Python. It provides a high-performance multidimensional array object, and tools for working with these arrays. If you are already familiar with MATLAB, you might find this tutorial useful to get started with Numpy.
+Numpy is the core library for scientific computing in Python. It provides a high-performance multidimensional array object, and tools for working with these arrays.
 
 
 ## Arrays
 A numpy array is a grid of values, all of the same type, and is indexed by a tuple of nonnegative integers. The number of dimensions is the rank of the array; the shape of an array is a tuple of integers giving the size of the array along each dimension.
 
+Let's create our first Numpy array
 ```python
 import numpy as np
 
@@ -15,8 +16,10 @@ print(a[0], a[1], a[2])   # Prints "1 2 3"
 
 a[0] = 5                  # Change an element of the array
 print(a)                  # Prints "[5, 2, 3]"
+```
 
-
+Let's add a dimension to our array
+```python
 b = np.array(
   [[1,2,3],
    [4,5,6]])    # Create a 2 dim array
@@ -26,6 +29,7 @@ print(b[0, 0], b[0, 1], b[1, 0])   # Prints "1 2 4"
 ```
 
 ## Create arrays
+Numpy comes with a lot of methods to create arrays, zeros, ones and others.
 
 ```python
 a = np.zeros((2,2))
