--- a/4.ml.md
+++ b/4.ml.md
@@ -12,8 +12,18 @@ There are three types of feedback that determine the three main types of learnin
 
 
 ## Unsupervised learning
-### KNN (K- Nearest Neighbors)
 ### K-Means
+
+```python
+from sklearn.cluster import KMeans
+import numpy as np
+X = np.array([ [1, 2], [1, 4], [1, 0], [4, 2], [4, 4], [4, 0] ])
+kmeans = KMeans(n_clusters=2, random_state=0).fit(X)
+
+print(kmeans.labels_)
+print(kmeans.cluster_centers_)
+print(kmeans.predict([[0, 0], [4, 4]]))
+```
 
 ### Mini project: Clustring posts
 
@@ -33,6 +43,35 @@ print(new_post_vec)
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ACmydtFDTGs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
+### KNN (K- Nearest Neighbors)
+
+Example: Classify Iris flowers
+```python
+
+import numpy as np
+from sklearn import neighbors, datasets
+
+n_neighbors = 15
+
+# import some data to play with
+iris = datasets.load_iris()
+
+# we only take the first two features. We could avoid this ugly
+# slicing by using a two-dim dataset
+X = iris.data[:, :2]
+y = iris.target
+
+h = .02  # step size in the mesh
+
+
+clf = neighbors.KNeighborsClassifier(n_neighbors, weights='uniform')
+clf.fit(X, y)
+
+Z = clf.predict([3, 4])
+
+print(Z)
+```
+
 ### LEARNING DECISION TREES
 Example of data:
 
@@ -51,12 +90,16 @@ x = features
 y = goal
 
 ```python
+import scipy as sp
+
 fp = sp.polyfit(x, y, 5)
 f  = sp.poly1d(fp)
+
+f([3, 4])
 ```
 
 ### ARTIFICIAL NEURAL NETWORKS
-
+KERAS
 
 ## reinforcement learning
 https://github.com/openai/universe
