--- a/4.extras/4.1.nlp.md
+++ b/4.extras/4.1.nlp.md
@@ -1,4 +1,5 @@
-NLP:
+# NLP
+
 http://www.nltk.org/
 https://textblob.readthedocs.io/en/dev/
 
@@ -31,8 +32,3 @@ for sentence in blob.sentences:
 
 blob.translate(to="es")  # 'La amenaza titular de The Blob...'
 ```
-
-
-
-Real-Time Object Detection:
-https://pjreddie.com/darknet/yolo/
