--- a/1.numpy/1.2.arrays.md
+++ b/1.numpy/1.2.arrays.md
@@ -1,8 +1,7 @@
 
 ## Arrays
-* A numpy array is a grid of values, all of the same type, and is indexed by a tuple of nonnegative integers.
-* The number of dimensions is the rank of the array;
-* The shape of an array is a tuple of integers giving the size of the array along each dimension.
+* A numpy array is a list of values, all of the same type, and is indexed by a tuple of nonnegative integers.
+* The number of dimensions is the rank of the array (Vector => 1, Matrix n x m => 2 etc.)
 
 Let's create our first Numpy array
 ```python
@@ -23,7 +22,7 @@ b = np.array(
   [[1,2,3],
    [4,5,6]])    # Create a 2 dim array
 
-print(b.shape)                     # Prints "(2, 3)"
+print(b.shape)                     # Prints "(2, 3)" => 2 lines 3 cols
 print(b[0, 0], b[0, 1], b[1, 0])   # Prints "1 2 4"
 ```
 
