--- a/1.numpy/1.3.math.md
+++ b/1.numpy/1.3.math.md
@@ -1,37 +1,27 @@
 
 ## Array math
+Let's create 2 arrays to test the operations possible with numpy.
 ```python
 x = np.array([[1,2],[3,4]], dtype=np.float64)
 y = np.array([[5,6],[7,8]], dtype=np.float64)
+```
 
-# Elementwise sum; both produce the array
-# [[ 6.0  8.0]
-#  [10.0 12.0]]
+## Adding 2 arrays
+```python
 print(x + y)
 print(np.add(x, y))
+```
 
-# Elementwise difference; both produce the array
-# [[-4.0 -4.0]
-#  [-4.0 -4.0]]
+## X-Y
+```python
 print(x - y)
 print(np.subtract(x, y))
+```
 
-# Elementwise product; both produce the array
-# [[ 5.0 12.0]
-#  [21.0 32.0]]
+## Multiplication
+```python
 print(x * y)
 print(np.multiply(x, y))
-
-# Elementwise division; both produce the array
-# [[ 0.2         0.33333333]
-#  [ 0.42857143  0.5       ]]
-print(x / y)
-print(np.divide(x, y))
-
-# Elementwise square root; produces the array
-# [[ 1.          1.41421356]
-#  [ 1.73205081  2.        ]]
-print(np.sqrt(x))
 ```
 
 Note that unlike MATLAB, * is elementwise multiplication, not matrix multiplication. We instead use the dot function to compute inner products of matrix:
@@ -42,4 +32,15 @@ y = np.array([[5,6],[7,8]])
 
 print(x.dot(y))
 print(np.dot(x, y))
+```
+
+## Devision
+```python
+print(x / y)
+print(np.divide(x, y))
+```
+
+## Square root
+```python
+print(np.sqrt(x))
 ```
