Add numpy course

--- a/2.ai/2.2.ai_goals.md
+++ b/2.ai/2.2.ai_goals.md
@@ -9,3 +9,6 @@ The overall research goal of artificial intelligence is to create technology tha
 Harder goals that we are far from achieving:
 - Creativity
 - General intelligence
+
+## Exercise
+Give the goals of some famous AI.
