--- a/2.ai/2.4.agent_goals.md
+++ b/2.ai/2.4.agent_goals.md
@@ -4,6 +4,6 @@ what to do. For example, at a road junction, the taxi can turn left, turn right,
 on. The correct decision depends on where the taxi is trying to get to. In other words, as well
 GOAL as a current state description, the agent needs some sort of goal information that describes
 situations that are desirable—for example, being at the passenger’s destination. The agent
-program can combine this with the model (the same information as was used in the modelbased
+program can combine this with the model (the same information as was used in the model-based
 reflex agent) to choose actions that achieve the goal. Figure 2.13 shows the goal-based
 agent’s structure.
