--- a/3.ml/3.3.kmeans.md
+++ b/3.ml/3.3.kmeans.md
@@ -1,4 +1,5 @@
 ### K-Means
+<img src="https://uploads.toptal.io/blog/image/92528/toptal-blog-image-1463672901961-c86610183bb2ba67f979c421f6748893.gif">
 
 ```python
 from sklearn.cluster import KMeans
