--- a/3.ml/3.6.regression.md
+++ b/3.ml/3.6.regression.md
@@ -1,6 +1,8 @@
 ### Regression
-x = features
-y = goal
+
+<img src="https://static1.squarespace.com/static/51d342a0e4b0290bcc56387d/t/51ddb856e4b0e5482bdf3e7a/1373485241911/weights.gif">
+
+
 
 ```python
 import scipy as sp
