--- a/3.ml/3.7.svm.md
+++ b/3.ml/3.7.svm.md
@@ -1,4 +1,6 @@
 ### Support vector machine
+<img src="https://jeremykun.files.wordpress.com/2017/05/svm_lots_of_choices.gif?w=1800" >
+
 ```python
 from sklearn import svm
 X = [[0, 0], [1, 1]]
@@ -8,7 +10,6 @@ clf = svm.SVC()
 clf.fit(X, y)  
 
 r = clf.predict([[2., 2.]])
-
 
 clf.support_vectors_
 ```
