--- a/0.python/0.3.conditions.md
+++ b/0.python/0.3.conditions.md
@@ -1,4 +1,4 @@
-### Control Flow: conditional statements
+# Control Flow: conditional statements
 If a condition is True do something otherwise do another thing else.
 
 ```python
