--- a/0.python/0.6.dicts.md
+++ b/0.python/0.6.dicts.md
@@ -1,4 +1,4 @@
-### Dictionary: Key-Value Data Structure
+# Dictionary: Key-Value Data Structure
 ```python
 dictionary_example = {
   "key1": "value1",
@@ -12,11 +12,11 @@ Now we manipulate an element of our Dictionary using its key:
 print("My name is %s" %(dictionary_tk["name"])) # My name is Leandro
 ```
 
-### Looping a Dictionary
+## Looping a Dictionary
 ```python
 for key, value in dictionary.items():
     print("%s --> %s" %(key, value))
 ```
 
-### Exercise:
+## Exercise:
 Create a French to English Translator.
