--- a/0.python/0.7.func_oop.md
+++ b/0.python/0.7.func_oop.md
@@ -1,4 +1,4 @@
-### Functions
+# Functions
 ```python
 def sum_of_2(arg1, arg2):
   result = arg1 * arg2
@@ -8,7 +8,7 @@ res = sum_of_2(2, 3)
 print(res)
 ```
 
-### OOP
+# OOP
 ```python
 class Vehicle:
   def __init__(self, number_of_wheels, type_of_tank, seating_capacity, maximum_velocity):
