--- a/2.ai/2.5.modeling.md
+++ b/2.ai/2.5.modeling.md
@@ -1,4 +1,4 @@
-### Modeling
+# Modeling
 
 A problem can be defined formally by five components:
 - The <b>initial state</b> that the agent starts in.
@@ -15,7 +15,7 @@ model.
 - A path cost function that assigns a numeric cost to each path. The problem-solving
 agent chooses a cost function that reflects its own performance measure.
 
-### Example: The vacuum world
+## Example: The vacuum world
 <img src="http://centurion2.com/AIHomework/Searching/VacuumWorld.JPG">
 
 - States: The state is determined by both the agent location and the dirt locations. The
