--- a/2.ai/2.6.solving_searching.md
+++ b/2.ai/2.6.solving_searching.md
@@ -1,4 +1,4 @@
-## Solving problem by searching
+# Solving problem by searching
 
 We will use example of solving the problem of going from place Arad to place Bucharest:
 
@@ -13,13 +13,13 @@ Another point we need to be careful of redundant paths.
 <img src="http://centurion2.com/AIHomework/Searching/AradBucharestPartial.JPG" />
 
 
-### Greedy best-first tree search
+## Greedy best-first tree search
 Select leaf with best cost to get to our goal
 
 <img src="http://cs-alb-pc3.massey.ac.nz/notes/59302/fig04.03.gif" />
 
 
-### A* search: Minimizing the total estimated solution cost
+## A* search: Minimizing the total estimated solution cost
 
 A* evaluates nodes by combining g(n), the cost to reach the node, and h(n), the cost
 to get from the node to the goal:
