--- a/3.ml/3.5.knn.md
+++ b/3.ml/3.5.knn.md
@@ -1,9 +1,4 @@
-
-## Supervised learning
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ACmydtFDTGs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-
-### KNN (K- Nearest Neighbors)
+# KNN (K- Nearest Neighbors)
 
 Example: Classify Iris flowers
 ```python
