--- a/0.python/0.5.lists.md
+++ b/0.python/0.5.lists.md
@@ -1,4 +1,4 @@
-### List: Collection | Array
+# List: Collection | Array
 ```python
 my_integers = [5, 7, 3, 4, 4]
 ```
@@ -18,7 +18,7 @@ print(bookshelf[0]) # The Effective Engineer
 print(bookshelf[1]) # The 4 Hour Work Week
 ```
 
-### Tuples
+# Tuples
 Lists that cannot be changed, just another thing () in place of [].
 
 ```python
