--- a/1.numpy/1.2.arrays.md
+++ b/1.numpy/1.2.arrays.md
@@ -1,5 +1,4 @@
-
-## Arrays
+# Arrays
 * A numpy array is a list of values, all of the same type, and is indexed by a tuple of nonnegative integers.
 * The number of dimensions is the rank of the array (Vector => 1, Matrix n x m => 2 etc.)
 
@@ -38,4 +37,10 @@ c = np.full((2,2), 7) # Create a constant array
 d = np.eye(2)         # Create a 2x2 identity
 
 e = np.random.random((2,2))
+```
+
+## Import from CSV
+```python
+import numpy as np
+np.genfromtxt('myfile.csv',delimiter=',')
 ```
