Changes Project replit url

--- a/3.ml/3.5.knn.md
+++ b/3.ml/3.5.knn.md
@@ -1,5 +1,7 @@
 # KNN (K- Nearest Neighbors)
 
+<img src="https://cdn-images-1.medium.com/max/1600/1*ZTa5pj_EJ-D8PhqWh7Sa_w.png">
+
 Example: Classify Iris flowers
 ```python
 
