Supervised learning slide

--- a/3.ml/3.4.supervised.md
+++ b/3.ml/3.4.supervised.md
@@ -1,6 +1,9 @@
 # Supervised Learning
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ACmydtFDTGs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
+
+## Supervised learning steps
 To create a supervised ML model we need first to train our model with some data. Then use this model to predict results.
+
 
 <img src="http://static1.squarespace.com/static/5206b718e4b0bdc26006bae2/t/554771abe4b0deabe55d5faa/1430745524151/?format=495w" />
