Add Lambda functions

--- a/0.python/0.7.func_oop.md
+++ b/0.python/0.7.func_oop.md
@@ -7,7 +7,14 @@ def sum_of_2(arg1, arg2):
 res = sum_of_2(2, 3)
 print(res)
 ```
+## Lambda functions
+The lambda operator or lambda function is a way to create small functions. Use it for math functions for example.
 
+```python
+df = lambda x: 4 * x**3 - 9 * x**2
+
+print(df(5))
+```
 
 # OOP
 ```python
