--- a/0.python/0.7.func_oop.md
+++ b/0.python/0.7.func_oop.md
@@ -10,9 +10,10 @@ print(res)
 ## Lambda functions
 The lambda operator or lambda function is a way to create small functions. Use it for math functions for example.
 
+Other good example is to pass the lambda function to another function as a callback.
+
 ```python
 df = lambda x: 4 * x**3 - 9 * x**2
-
 print(df(5))
 ```
 
