--- a/3.ml/3.2.feature_engineering.md
+++ b/3.ml/3.2.feature_engineering.md
@@ -4,5 +4,19 @@ Feature engineering is the process of using domain knowledge of the data to crea
 ## Datasets sources
 <a href="https://www.kaggle.com/datasets">Kaggle.com</a>
 
+<br><br>
+
+<a href="https://en.wikipedia.org/wiki/List_of_datasets_for_machine_learning_research">List of datasets for machine learning research
+- wikipedia</a>
+
+
+## The process of feature engineering
+* Brainstorming or Testing features
+* Deciding what features to create
+* Creating features
+* Checking how the features work with your model
+* Improving your features if needed
+* Go back to brainstorming/creating more features until the work is done.
+
 ## Exercise
 Analyse some of the datasets from Kaggle.
