--- a/3.ml/3.7.regression.md
+++ b/3.ml/3.7.regression.md
@@ -7,10 +7,30 @@
 ```python
 import scipy as sp
 
-fp = sp.polyfit(x, y, 5)
+fp = sp.polyfit(x, y, deg)
 f  = sp.poly1d(fp)
 
 f([3, 4])
+```
+
+## Example
+
+```python
+friends = [ 70, 65, 72, 63, 71, 64, 60, 64, 67]
+minutes = [175, 170, 205, 120, 220, 130, 105, 145, 190]
+
+import scipy as sp
+
+fp = sp.polyfit(friends, minutes, 1)
+f  = sp.poly1d(fp)
+
+# display f
+plt.scatter(friends, minutes)
+arr = []
+for i in sorted(friends):
+    arr.append(f(i))
+plt.plot(sorted(friends), arr, color='green', marker='', linestyle='solid')
+plt.show()
 ```
 
 Exercise: write a program that predict number of website visitors giving an hour.
