--- a/3.ml/3.8.nn.md
+++ b/3.ml/3.8.nn.md
@@ -1,6 +1,7 @@
 # ARTIFICIAL NEURAL NETWORKS
 https://techcrunch.com/2017/04/13/neural-networks-made-easy/
 
+<img src="https://d17h27t6h515a5.cloudfront.net/topher/2017/March/58db494a_karpathy-network/karpathy-network.png">
 
 ## Dataset
 https://www.kaggle.com/uciml/pima-indians-diabetes-database/data
