--- a/1.numpy/1.4.indexing.md
+++ b/1.numpy/1.4.indexing.md
@@ -1,3 +1,20 @@
+## Slicing
+### 1-dim arrays
+
+```python
+a[0:2] # returns a[0] and a[1]
+```
+### 2-dim arrays
+
+```python
+b[0:2,1] # returns b[0, 1] and b[1, 1]
+```
+
+```python
+b[:1] # select all items at row 0
+```
+
+
 ## Indexing
 As we did see we can access an element with it's (row, col) combination, numpy has other cool method to access elements:
 
