--- a/3.ml/3.1.intro.md
+++ b/3.ml/3.1.intro.md
@@ -6,3 +6,5 @@ There are three types of feedback that determine the three main types of learnin
 - unsupervised learning: the agent learns patterns in the input even though no explicit feedback is supplied.
 - reinforcement learning: the agent learns from a series of reinforcements—rewards or punishments.
 - supervised learning: the agent observes some example input–output pairs and learns a function that maps from input to output.
+
+<img src="http://beta.cambridgespark.com/courses/jpm/figures/mod1_SuperUnsuper.png">
