--- a/3.ml/3.2.feature_engineering.md
+++ b/3.ml/3.2.feature_engineering.md
@@ -4,10 +4,7 @@ Feature engineering is the process of using domain knowledge of the data to crea
 ## Datasets sources
 <a href="https://www.kaggle.com/datasets">Kaggle.com</a>
 
-<br><br>
-
-<a href="https://en.wikipedia.org/wiki/List_of_datasets_for_machine_learning_research">List of datasets for machine learning research
-- wikipedia</a>
+<a href="https://en.wikipedia.org/wiki/List_of_datasets_for_machine_learning_research">List of datasets for machine learning research wikipedia</a>
 
 
 ## The process of feature engineering
