Add project to numpy

--- a/1.numpy/1.4.indexing.md
+++ b/1.numpy/1.4.indexing.md
@@ -14,6 +14,9 @@ b[0:2,1] # returns b[0, 1] and b[1, 1]
 b[:1] # select all items at row 0
 ```
 
+```python
+a[: , 1] # select all items at col 1
+```
 
 ## Indexing
 As we did see we can access an element with it's (row, col) combination, numpy has other cool method to access elements:
