Add project to numpy

--- a/1.numpy/1.5.work.md
+++ b/1.numpy/1.5.work.md
@@ -14,4 +14,9 @@ plt.show()
 ## Tasks
 
 1. Create 3 images with Red, green and bleu channels
+<img src="https://image.ibb.co/fxUdpR/Screen_Shot_2018_02_02_at_15_43_21.png">
+<img src="https://image.ibb.co/hE34UR/Screen_Shot_2018_02_02_at_15_43_28.png">
+<img src="https://image.ibb.co/m5qJpR/Screen_Shot_2018_02_02_at_15_43_33.png">
+
 2. Change image to Greyscale
+<img src="https://image.ibb.co/eHRr9R/Screen_Shot_2018_02_02_at_15_43_38.png">
