--- a/1.bis.pandas/1.bis.1.object_creation.md
+++ b/1.bis.pandas/1.bis.1.object_creation.md
@@ -3,3 +3,29 @@
 import pandas as pd
 df = pd.DataFrame({'AAA' : [4,5,6,7], 'BBB' : [10,20,30,40],'CCC' : [100,50,-30,-50]})
 ```
+
+# import csvs
+```python
+df = pd.read_csv('/path/to/example.csv')
+```
+
+## no headers
+```python
+df = pd.read_csv('/path/to/example.csv', header=None)
+```
+
+## adding headers
+```python
+df = pd.read_csv('/path/to/example.csv', header=None, names=['UID', 'First Name', 'Last Name', 'Age', 'Pre-Test Score', 'Post-Test Score'], index_col='UID')
+```
+
+## missing values
+```python
+df = pd.read_csv('pandas_dataframe_importing_csv/example.csv', na_values=['.'])
+```
+
+### missing values by column
+```python
+missing_conditions = 'Last Name': ['.', 'NA'], 'Pre-Test Score': ['.']}
+df = pd.read_csv('pandas_dataframe_importing_csv/example.csv', na_values=sentinels)
+```
