PAndas pivot table

--- a/1.bis.pandas/1.bis.3.pivot_table.md
+++ b/1.bis.pandas/1.bis.3.pivot_table.md
@@ -1,5 +1,29 @@
-# Pivot tables
+# Group by
 ```python
-mean_ratings = data.pivot_table('rating', rows='title',
-                                cols='gender', aggfunc='mean')
+import pandas as pd
+import numpy as np
+```
+
+## Import Data
+```python
+df = pd.read_csv('MERGED1996_97_PP.csv', index_col="UNITID")
+```
+
+## Groupe by CITY and count
+```python
+df.groupby(['CITY']).count()
+```
+
+
+# Pivot table
+## Count
+```python
+pd.pivot_table(df, 'INSTNM', ['CITY'], aggfunc="count")
+```
+
+## sum and avgs
+```python
+df = pd.DataFrame({'AAA' : [4,5,6,7], 'BBB' : [10,20,30,40],'CCC' : ["A","B","B","A"]})
+df.pivot_table(["AAA", "BBB"], "CCC", aggfunc="sum")
+df.pivot_table(["AAA", "BBB"], "CCC", aggfunc="mean")
 ```
