--- a/5.matplotlib/5.1.first_plot.md
+++ b/5.matplotlib/5.1.first_plot.md
@@ -18,3 +18,6 @@ plt.plot(years, gdp, color='green', marker='o', linestyle='solid')
 ```python
 plt.show()
 ```
+
+## More examples
+See more examples <a href="https://matplotlib.org/examples/index.html">here</a>
