--- a/1.bis.pandas/1.bis.2.viewing_data.md
+++ b/1.bis.pandas/1.bis.2.viewing_data.md
@@ -26,3 +26,9 @@ df.sort_index(axis=1, ascending=False)
 ```python
 df.sort_values(by='B')
 ```
+
+## Replace
+```python
+df.replace(old_value, new_value)
+df[column] = df[column].replace("A", 1)
+```
