--- a/1.bis.pandas/1.bis.4.case_study.md
+++ b/1.bis.pandas/1.bis.4.case_study.md
@@ -1,8 +1,7 @@
 ## Data
 
-Download data from <a href="https://collegescorecard.ed.gov/data/">here</a>
+Download data from <a href="https://www.kaggle.com/datasnaek/youtube-new">here</a>
 
 ## Work to do
-* Find the top 10 schools with the best sat scores
-* Compute the correlation between the SAT scores and
-median income
+* Have a look of kernels and how we can use pandas to analyse youtube trending
+* Have fun with this data
