--- a/2.ai/2.4.agent_goals.md
+++ b/2.ai/2.4.agent_goals.md
@@ -1,7 +1,5 @@
 #  Goal-based agents
-Knowing something about the current state of the environment is not always enough to decide what to do.
+Goal-based agents further expand on the capabilities of the model-based agents, by using "goal" information. Goal information describes situations that are desirable. This allows the agent a way to choose among multiple possibilities, selecting the one which reaches a goal state. Search and planning are the subfields of artificial intelligence devoted to finding action sequences that achieve the agent's goals.
 
-For example, at a road junction, the taxi can turn left, turn right, or go straight on. The correct decision depends on where the taxi is trying to get to.
 
-In other words, as well GOAL as a current state description, the agent needs some sort of goal information that describes situations that are desirable—for example, being at the passenger’s destination. The agent
-program can combine this with the model (the same information as was used in the model-based reflex agent) to choose actions that achieve the goal. 
+<img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Model_based_goal_based_agent.png">
