--- a/2.ai/2.3.agent.md
+++ b/2.ai/2.3.agent.md
@@ -6,13 +6,14 @@ acting upon that environment through actuators.
 ## Representation of an agent
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/IntelligentAgent-SimpleReflex.png/408px-IntelligentAgent-SimpleReflex.png">
 
+## Exercise
 Analyse the case of the Boston Dynamics robot "Atlas":
 <iframe width="560" height="315" src="https://www.youtube.com/embed/fRj34o4hN4I" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
-## Simple reflex agents
+## Simple reflex agents algorithm
 ```ruby
 function SIMPLE_REFLEX_AGENT(percept) returns an action
-  persistent: rules, a set of condition–action rules
+  prerequisite: rules { conditions, action }
 
   state ← INTERPRET_INPUT(percept)
   rule ← RULE_MATCH(state, rules)
