--- a/3.ml/3.1.intro.md
+++ b/3.ml/3.1.intro.md
@@ -1,6 +1,5 @@
 # ML
-An agent is learning if it improves its performance on future tasks after making observations
-about the world.
+Machine learning is a field of computer science that gives computer systems the ability to "learn" with data, without being explicitly programmed.
 
 There are three types of feedback that determine the three main types of learning:
 - unsupervised learning: the agent learns patterns in the input even though no explicit feedback is supplied.
