--- a/3.ml/3.7.regression.md
+++ b/3.ml/3.7.regression.md
@@ -33,4 +33,5 @@ plt.plot(sorted(friends), arr, color='green', marker='', linestyle='solid')
 plt.show()
 ```
 
-Exercise: write a program that predict number of website visitors giving an hour.
+## Exercise
+Write a program that predict number of website visitors giving an hour.
